@@ -60,8 +60,12 @@ typedef struct cimXmlRequestContext {
    int operation;
 } CimXmlRequestContext;
 
-extern RespSegments handleCimXmlRequest(CimXmlRequestContext * ctx);
+extern RespSegments handleCimXmlRequest(CimXmlRequestContext * ctx, int flags);
 extern int cleanupCimXmlRequest(RespSegments * rs);
 
+#ifdef ALLOW_UPDATE_EXPIRED_PW
+  #define HCR_EXPIRED_PW 1  /* flag: expired user tries to auth */
+  #define HCR_UPDATE_PW 2  /* flag: UpdateExpiredPassword HTTP header */
+#endif
 
 #endif
