@@ -3,6 +3,7 @@ Changes in 1.3.12
 
 New features:
 - 3190623 Set *IsSettable properties to false for IndicationService
+- 3313833 Allow for passthrough for expired user to update password
 
 Bugs fixed:
 
